# aws-bootstrap

./: .checkov.yaml  .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  README.md  config.nix  environments.nix  flake.nix  infracost.yml  main.tf  module.nix  providers.tf  pyproject.toml  root.hcl  terragrunt.hcl
.devcontainer/: Containerfile  devcontainer.json
bootstrap/: .terraform.lock.hcl  main.tf  terragrunt.hcl
module/: flake.nix
module/environments/: default.nix
module/minimal/: default.nix
nonprod/: backend.tf  provider.tf  terragrunt.hcl
prod/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  route-53-systems-richtman-au.tf  route53-richtman-au.tf  route53-richtman-com-au.tf  route53-richtman-dev.tf  route53-richtman-id-au.tf  route53-richtman.au.tf  route53-systems-richtman-au.tf  route53.tf  terragrunt.hcl
prod/assets/: redirect.html
prod/assets/.well-known/: webfinger
root/: backend.tf  main.tf  terragrunt.hcl
shared/: root-provider.tf
