[tool.poetry]
name = "aws-bootstrap"
version = "0.1.0"
description = "Declarative infrastructure for my personal AWS account(s) and hosting"
authors = ["Richtman, Ariel <10679234+arichtman@users.noreply.github.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
#TODO: checkov doesn't seem to be available for darwin or some other system types
#  however there is a nixpkgs version, which we will install.
# checkov = "^2.0.1220"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
