[tool.poetry]
name = "aws-bootstrap"
version = "0.1.0"
description = "Declarative infrastructure for my personal AWS account(s) and hosting"
authors = ["Richtman, Ariel <10679234+arichtman@users.noreply.github.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
# Disabled because checkov is a fat pig of whiney dependencies
# checkov = "^2.3.281"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
